feat: stabilize quality artifact contracts
Add agent-facing artifact docs, release smoke guidance, per-dimension trend rendering, deterministic trend snapshots, and JSON contract tests for report/task exports.